# rolecraft

./: LICENSE  pyproject.toml
examples/: example.py  start_service.sh
rolecraft/: __init__.py  __main__.py  cli.py  consumer.py  encoder.py  local.py  message.py  middleware.py  notify_queue.py  queue.py  queue_builder.py  queue_config.py  queue_discovery.py  queue_factory.py  queue_manager.py  role.py  role_hanger.py  service.py  service_factory.py  thread_local.py  worker.py  worker_pool.py
rolecraft/broker/: __init__.py  base_broker.py  broker.py  error.py  raw_message.py  receive_future.py  stub_broker.py
rolecraft/config/: __init__.py  config.py  config_fetcher.py  config_store.py  configurable_config.py  default_queue_config.py  global_default.py  middleware_list.py  queue_config.py  queue_discovery.py
rolecraft/consumer/: __init__.py  consumer.py  consumer_base.py  consumer_factory.py  default_consumer.py  threaded_consumer.py
rolecraft/middleware/: __init__.py  middleware.py  middleware_list.py  retryable.py
rolecraft/middlewares/: __init__.py  base_middleware.py  queue_recoverable.py  retryable.py
rolecraft/queue/: __init__.py  encoder.py  message.py  middleware.py  queue.py  queue_config.py
rolecraft/queue_factory/: __init__.py  cached_queue_factory.py  config_fetcher.py  queue_builder.py  queue_factory.py
rolecraft/role/: __init__.py  role.py  role_decorator.py  role_hanger.py  serializer.py
rolecraft/role_lib/: __init__.py  error.py  role.py  role_decorator.py  role_hanger.py  serializer.py
rolecraft/service/: __init__.py  service.py  service_factory.py  thread_local.py  worker.py  worker_pool.py
rolecraft/service_factory/: __init__.py  service.py  (+2 more)
taskforge/: broker.py
tests/: conftest.py  test_encoder.py  test_local.py  test_notify_queue.py  test_service.py  test_worker_pool.py
(+27 files in other folders)
